# python-project-template

./: .env  .gitignore  .pre-commit-config.yaml  .tool-versions  Makefile  README.md  cspell.config.yaml  lint.sh  package-lock.json  package.json  pyproject.toml  pyrightconfig.json
app/: sample.py
app/sample/: sample_module.py
script/: setup.sh
src/pythonprojecttemplate/: sample.py
src/pythonprojecttemplate/sample/: sample_module.py
tests/: template_test.py  test_template.py
