[tool.poetry]
name = "python-project-template"
version = "0.1.0"
description = "Python project template using Poetry"
authors = ["quwac <53551867+quwac@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.4"
black = "^20.8b1"
isort = "^5.6.4"
flake8 = "^3.8.4"
hacking = "^4.0.0"
flake8-annotations = "^2.4.1"
flake8-classmethod-staticmethod = "^1.0"
flake8-print = "^3.1.4"
flake8-variables-names = "^0.0.3"
flake8-simplify = "^0.11.0"
flake8-SQL = "^0.4.1"
flake8-use-fstring = "^1.1"
fire = "^0.3.1"
json5 = "^0.9.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
force_sort_within_sections = true
group_by_package = true

[tool.black]
line-length = 99
