[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]

[tool.autoflake]
check = false
expand-star-imports = true
ignore-init-module-imports = true
in-place = true
recursive = true
remove-all-unused-imports = true
remove-duplicate-keys = true
remove-unused-variables = true
verbose = 0

[tool.black]
line-length = 100

[tool.flake8]
enable-extensions = "B1"
enable-extra-whitelist = true
exclude = ".git,__pycache__,.venv,.pytest_cache,env"
ignore = "ANN002,ANN003,ANN101,ANN102,ANN202,ANN204,FNE007,H301,SIM106,W503"
max-line-length = 100
suppress-none-returning = true
warn-symbols = 'obsolete_module=Warning!\nmodule.obsolete_function=Warning!'

[tool.isort]
profile = "black"

[tool.poetry]
authors = ["quwac <53551867+quwac@users.noreply.github.com>"]
description = "Python project template using Poetry"
name = "python-project-template"
version = "1.0.0"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
flake8-alfred = "^1.1.1"
flake8-annotations = "^2.9.1"
flake8-bugbear = "^22.9.23"
flake8-builtins = "^2.0.0"
flake8-cognitive-complexity = "^0.1.0"
flake8-functions-names = "^0.3.0"
flake8-print = "^5.0.0"
flake8-pytest = "^1.4"
flake8-simplify = "^0.19.3"
flake8-string-format = "^0.3.0"
flake8-use-fstring = "^1.4"
pre-commit = "^2.20.0"
pyproject-flake8 = "^5.0.4.post1"
pyright = "^1.1.276"
pytest = "^7.1.3"

[tool.pyright]
defineConstant = { DEBUG = true }
exclude = ["**/node_modules",
    "**/__pycache__",
]
executionEnvironments = [
  { root = "src" }
]
ignore = []
include = ["app"]
pythonVersion = "3.10"
reportCallInDefaultInitializer = true
reportImplicitStringConcatenation = true
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedCallResult = true
stubPath = "stubs"
typeCheckingMode = true
venv = ".venv"
venvPath = '.'
verboseOutput = true
