[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]

[tool.autoflake]
check = false
expand-star-imports = true
ignore-init-module-imports = true
in-place = true
recursive = true
remove-all-unused-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[tool.black]
line-length = 100

[tool.flake8]
enable-extensions = "B1"
enable-extra-whitelist = true
exclude = ".git,__pycache__,.venv,.pytest_cache,env"
ignore = "ANN002,ANN003,ANN101,ANN102,ANN202,ANN204,E501,FNE007,H301,SIM106,W503"
max-line-length = 100
max-parameters-amount = 3
max_returns_amount = 2
suppress-none-returning = true
warn-symbols = 'obsolete_module=Warning!\nmodule.obsolete_function=Warning!'

[tool.isort]
profile = "black"

[tool.poetry]
authors = ["quwac <53551867+quwac@users.noreply.github.com>"]
description = "Python project template using Poetry"
name = "python-project-template"
version = "1.0.0"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
flake8-alfred = "^1.1.1"
flake8-annotations = "^3.0.1"
flake8-bugbear = "^23.9.16"
flake8-builtins = "^2.1.0"
flake8-cognitive-complexity = "^0.1.0"
flake8-functions = "^0.0.8"
flake8-functions-names = "^0.4.0"
flake8-print = "^5.0.0"
flake8-pytest = "^1.4"
flake8-simplify = "^0.20.0"
flake8-string-format = "^0.3.0"
flake8-use-fstring = "^1.4"
pre-commit = "^3.4.0"
pyproject-flake8 = "^6.0.0.post1"
pyright = "^1.1.327"
pytest = "^7.4.2"

[tool.pyright]
defineConstant = {DEBUG = true}
exclude = [
  "**/__pycache__",
  "**/node_modules"
]
executionEnvironments = [
  {root = "src"}
]
ignore = []
include = ["app"]
pythonVersion = "3.10"
reportCallInDefaultInitializer = true
reportImplicitStringConcatenation = true
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedCallResult = true
stubPath = "stubs"
typeCheckingMode = true
venv = ".venv"
venvPath = '.'
verboseOutput = true
